--- a/css/style.css
+++ b/css/style.css
@@ -586,21 +586,21 @@ footer {
 .splat-2 {  /*amarillo*/
     width: 200px;
     top: 30%;
-    right: -50px;
+    left: 1600px;
     transform: rotate(20deg);
 }
 
 .splat-3 { /*rojo*/
     width: 280px;
-    top: 10%;
-    left: -80px;
+    top: 300px;
+    left: -60px;
     transform: rotate(10deg);
 }
 
 .splat-4 { /*verde*/
     width: 320px;
-    bottom: -150px;
-    right: 5%;
+    top: 600px;
+    left: 1534px;
     transform: rotate(45deg);
 }
 
@@ -613,14 +613,14 @@ footer {
 
 .splat-6 { /*morado*/
     width: 300px;
-    bottom: -600px;
-    right: 0%;
+    top: 920px;
+    left: 1580px;
     transform: rotate(-5deg);
 }
 .splat-7 { /*cyan*/
     width: 300px;
     top: -50px;
-    right: 10%;
+    left: 1620px;
     transform: rotate(-5deg);
 }
 
