--- a/css/style.css
+++ b/css/style.css
@@ -689,3 +689,10 @@ footer {
         border-radius: 0 0 10px 10px; /* Redondea solo las esquinas inferiores */
     }
 }
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Evita el scroll horizontal */
+}
