--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,7 @@ footer {
 }
 
 .project-card img {
-    width: 100%;
+    width: 100px;
     height: 200px;
     object-fit: cover;
     border-bottom: 1px solid #eee;
